--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
 
     <application
         android:allowBackup="false"
-        android:name="org.mokee.warpshare.WarpShareApplication"
+        android:name=".WarpShareApplication"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -37,7 +37,7 @@
         tools:targetApi="31"
         tools:ignore="GoogleAppIndexingWarning" >
 
-        <activity android:name="org.mokee.warpshare.MainActivity"
+        <activity android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -46,7 +46,7 @@
         </activity>
 
         <activity
-            android:name="org.mokee.warpshare.ShareActivity"
+            android:name=".ShareActivity"
             android:theme="@style/ShareTheme"
             android:exported="true">
             <intent-filter>
@@ -69,23 +69,23 @@
         </activity>
 
         <activity
-            android:name="org.mokee.warpshare.SetupActivity"
+            android:name=".SetupActivity"
             android:launchMode="singleInstance" />
 
         <activity
-            android:name="org.mokee.warpshare.SettingsActivity"
+            android:name=".SettingsActivity"
             android:label="@string/settings" />
 
         <service
-            android:name="org.mokee.warpshare.ReceiverService"
+            android:name=".ReceiverService"
             android:enabled="false" />
 
         <receiver
-            android:name="org.mokee.warpshare.TriggerReceiver"
+            android:name=".TriggerReceiver"
             android:exported="true"
             tools:ignore="ExportedReceiver" />
 
-        <receiver android:name="org.mokee.warpshare.InitializeReceiver"
+        <receiver android:name=".InitializeReceiver"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -94,7 +94,7 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="org.mokee.warpshare.files"
+            android:authorities=".files"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
